err/python-vote-core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygraph'...
Listing './lib/python3.5/site-packages/pygraph/algorithms'...
Listing './lib/python3.5/site-packages/pygraph/algorithms/filters'...
Listing './lib/python3.5/site-packages/pygraph/algorithms/heuristics'...
Listing './lib/python3.5/site-packages/pygraph/classes'...
Listing './lib/python3.5/site-packages/pygraph/mixins'...
Listing './lib/python3.5/site-packages/pygraph/readwrite'...
Listing './lib/python3.5/site-packages/python_graph_core-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/python_vote_core-20120423.0.egg-info'...
Listing './lib/python3.5/site-packages/pyvotecore'...
Compiling './lib/python3.5/site-packages/pyvotecore/condorcet.py'...
***   File "./lib/python3.5/site-packages/pyvotecore/condorcet.py", line 46
    print ballot_notation
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyvotecore/schulze_helper.py'...
***   File "./lib/python3.5/site-packages/pyvotecore/schulze_helper.py", line 117
    print "Proportional completion broke (went from %s to %s)" % (weight_sum, sum(profile.values()))
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test_functionality'...
Listing './lib/python3.5/site-packages/test_performance'...
Listing './share'...
Listing './share/python-wheels'...
